# serde-bigquery

./: Cargo.toml  LICENSE  README.md
json2bigquery/: Cargo.toml
json2bigquery/src/: main.rs
serde_bigquery/: Cargo.toml
serde_bigquery/src/: error.rs  lib.rs  ser.rs  types.rs
serde_bigquery/src/ser/: identifier.rs  mod.rs  serializer.rs  struct_serializer.rs  typed_serializer.rs  unsupported.rs
src/: error.rs  ser.rs
