[package]
name = "json2bigquery"
version = "0.1.1"
edition = "2018"
license = "MIT"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
keywords = ["json", "bigquery"]
categories = ["command-line-utilities"]
description = "A simple utility to convert JSON into a BigQuery literal."

[dependencies]
serde_json = "1.0.68"
serde-transcode = "1.1.1"
serde_bigquery = { version = "0.1.1", path = "../serde_bigquery" }
